add type converter

--- a/src/com/anatawa12/sai/resources/Messages.properties
+++ b/src/com/anatawa12/sai/resources/Messages.properties
@@ -94,7 +94,7 @@ msg.mult.index =\
 msg.bad.for.in.destruct =\
     Left hand side of for..in loop must be an array of length 2 to accept \
     key/value pair.
-    
+
 msg.cant.convert =\
     Can''t convert to type "{0}".
 
@@ -169,6 +169,10 @@ msg.method.ambiguous =\
 msg.constructor.ambiguous =\
     The choice of Java constructor {0} matching JavaScript argument types ({1}) is ambiguous; \
     candidate constructors are: {2}
+
+# type conversation
+msg.conversion.not.allowed.string.to.char=Cannot convert string to character; its length must be exactly 1
+msg.conversion.not.allowed.number.to.char=Cannot convert number to character; it is out of 0-65535 range
 
 # NativeJavaObject
 msg.conversion.not.allowed =\
@@ -257,7 +261,7 @@ msg.var.redecl =\
 
 msg.const.redecl =\
     TypeError: redeclaration of const {0}.
-    
+
 msg.let.redecl =\
     TypeError: redeclaration of variable {0}.
 
@@ -364,7 +368,7 @@ msg.no.semi.for =\
 
 msg.no.semi.for.cond =\
     missing ; after for-loop condition
-    
+
 msg.in.after.for.name =\
     missing in after for
 
@@ -376,7 +380,7 @@ msg.no.paren.with =\
 
 msg.no.paren.after.with =\
     missing ) after with-statement object
-    
+
 msg.no.with.strict =\
     with statements not allowed in strict mode
 
@@ -520,7 +524,7 @@ msg.bad.id.strict =\
 
 # ScriptRuntime
 
-# is there a better message for this? 
+# is there a better message for this?
 # it's currently only used as a poison pill for caller, caller and arguments properties
 msg.op.not.allowed =\
     This operation is not allowed.
@@ -847,7 +851,7 @@ msg.send.newborn =\
 
 msg.already.exec.gen =\
     Already executing generator
-    
+
 msg.StopIteration.invalid =\
     StopIteration may not be changed to an arbitrary object.
 
