add directive parser

--- a/src/com/anatawa12/sai/resources/Messages.properties
+++ b/src/com/anatawa12/sai/resources/Messages.properties
@@ -253,6 +253,18 @@ msg.toisostring.must.return.primitive =\
     toISOString must return a primitive value, but instead returned "{0}"
 
 # Parser
+msg.sai.directive.unknown.directive =\
+    Unknown directive: {0}
+
+msg.sai.directive.unexpected.token =\
+    Unexpected token, expected {0}.
+
+msg.sai.directive.unexpected.char =\
+    Unexpected character, expected {0}.
+
+msg.sai.directive.unexpected.eol =\
+    Unexpected end of line.
+
 msg.got.syntax.errors = \
     Compilation produced {0} syntax errors.
 
